School-320 CI/CD (#177)
Add CI/CD to the project, fix image saving problems