@@ -1,7 +1,5 @@
 package com.epam.edumanagementsystem.util.imageUtil.rest.api;
 
-import org.apache.commons.io.IOUtils;
-import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.GetMapping;
@@ -16,19 +14,14 @@ import java.io.InputStream;
 @Controller
 public class ImageController {
 
-    @Value("${upload.path}")
-    private String upload_path;
-
     private final String upload = System.getProperty("user.home") + "/img/";
 
-    @GetMapping(
-            value = "/image",
-            produces = MediaType.IMAGE_JPEG_VALUE
-    )
-    public @ResponseBody
-    byte[] getImage(@RequestParam("name") String imageName) throws IOException {
-        InputStream in = new FileInputStream(upload_path + File.separator + imageName);
-        return IOUtils.toByteArray(in);
+    @GetMapping(value = "/image", produces = MediaType.IMAGE_JPEG_VALUE)
+    public @ResponseBody byte[] getImage(@RequestParam("name") String imageName) throws IOException {
+        InputStream in = new FileInputStream(upload + File.separator + imageName);
+        byte[] userImageInBytes = in.readAllBytes();
+        in.close();
+        return userImageInBytes;
     }
 
 }
